[gd_scene load_steps=82 format=2]

[ext_resource path="res://Storymodemenu.gd" type="Script" id=1]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/background/yellow bg.png" type="Texture" id=2]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_ui/BF idle dance white0007.png" type="Texture" id=3]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_ui/BF idle dance white0006.png" type="Texture" id=4]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_ui/BF idle dance white0004.png" type="Texture" id=5]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_ui/BF idle dance white0005.png" type="Texture" id=6]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_ui/BF idle dance white0003.png" type="Texture" id=7]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_ui/BF idle dance white0008.png" type="Texture" id=8]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_ui/BF idle dance white0002.png" type="Texture" id=9]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_ui/BF idle dance white0001.png" type="Texture" id=10]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_ui/BF idle dance white0009.png" type="Texture" id=11]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_ui/BF idle dance white0011.png" type="Texture" id=12]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_ui/BF idle dance white0012.png" type="Texture" id=13]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_ui/BF idle dance white0013.png" type="Texture" id=14]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_ui/BF idle dance white0014.png" type="Texture" id=15]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_ui/BF idle dance white0010.png" type="Texture" id=16]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0002.png" type="Texture" id=17]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0006.png" type="Texture" id=18]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0029.png" type="Texture" id=19]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0003.png" type="Texture" id=20]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0022.png" type="Texture" id=21]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0001.png" type="Texture" id=22]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0014.png" type="Texture" id=23]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0016.png" type="Texture" id=24]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0007.png" type="Texture" id=25]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0015.png" type="Texture" id=26]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0010.png" type="Texture" id=27]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0005.png" type="Texture" id=28]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0025.png" type="Texture" id=29]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0019.png" type="Texture" id=30]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0017.png" type="Texture" id=31]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0012.png" type="Texture" id=32]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0004.png" type="Texture" id=33]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0023.png" type="Texture" id=34]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0028.png" type="Texture" id=35]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0011.png" type="Texture" id=36]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0021.png" type="Texture" id=37]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0008.png" type="Texture" id=38]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0018.png" type="Texture" id=39]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0027.png" type="Texture" id=40]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0026.png" type="Texture" id=41]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0030.png" type="Texture" id=42]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0020.png" type="Texture" id=43]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0013.png" type="Texture" id=44]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0009.png" type="Texture" id=45]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/gf_ui/GF Dancing Beat WHITE0024.png" type="Texture" id=46]
[ext_resource path="res://vcr.ttf" type="DynamicFontData" id=47]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/tutorial/tutorial.png" type="Texture" id=48]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/arrow left/arrow left.png" type="Texture" id=49]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/normal/NORMAL.png" type="Texture" id=50]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/arrow right/arrow right.png" type="Texture" id=51]
[ext_resource path="res://diff.gd" type="Script" id=52]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0006.png" type="Texture" id=53]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0007.png" type="Texture" id=54]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0008.png" type="Texture" id=55]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0009.png" type="Texture" id=56]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0010.png" type="Texture" id=57]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0011.png" type="Texture" id=58]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0005.png" type="Texture" id=59]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0018.png" type="Texture" id=60]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0019.png" type="Texture" id=61]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0001.png" type="Texture" id=62]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0020.png" type="Texture" id=63]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0021.png" type="Texture" id=64]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0022.png" type="Texture" id=65]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0017.png" type="Texture" id=66]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0016.png" type="Texture" id=67]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0012.png" type="Texture" id=68]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0013.png" type="Texture" id=69]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0025.png" type="Texture" id=70]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0026.png" type="Texture" id=71]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0002.png" type="Texture" id=72]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0004.png" type="Texture" id=73]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0003.png" type="Texture" id=74]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0023.png" type="Texture" id=75]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0024.png" type="Texture" id=76]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0014.png" type="Texture" id=77]
[ext_resource path="res://mainmenu/ui_assets/Kade Engine sussy stuff/bf_hey/BF HEY!!0015.png" type="Texture" id=78]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 47 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 24.0
}, {
"frames": [ ExtResource( 62 ), ExtResource( 72 ), ExtResource( 74 ), ExtResource( 73 ), ExtResource( 59 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 67 ), ExtResource( 66 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 70 ), ExtResource( 71 ) ],
"loop": false,
"name": "hey",
"speed": 24.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 33 ), ExtResource( 28 ), ExtResource( 18 ), ExtResource( 25 ), ExtResource( 38 ), ExtResource( 45 ), ExtResource( 27 ), ExtResource( 36 ), ExtResource( 32 ), ExtResource( 44 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 31 ), ExtResource( 39 ), ExtResource( 30 ), ExtResource( 43 ), ExtResource( 37 ), ExtResource( 21 ), ExtResource( 34 ), ExtResource( 46 ), ExtResource( 29 ), ExtResource( 41 ), ExtResource( 40 ), ExtResource( 35 ), ExtResource( 19 ), ExtResource( 42 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 65.0
margin_top = 412.0
margin_right = 179.0
margin_bottom = 442.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.898039, 0.341176, 0.466667, 1 )
text = "TRACKS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/Label"]
margin_left = -16.0
margin_top = 47.0
margin_right = 136.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.898039, 0.341176, 0.466667, 1 )
text = "tutorial"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bf_ui" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 484.438, 209.435 )
scale = Vector2( 0.733841, 0.733841 )
frames = SubResource( 2 )
frame = 8
playing = true

[node name="gf_ui" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 815, 187 )
scale = Vector2( 0.41821, 0.41821 )
frames = SubResource( 3 )
frame = 18
playing = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 342.0
margin_top = 403.0
margin_right = 721.0
margin_bottom = 556.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/VBoxContainer"]
position = Vector2( 161, 18 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 48 )

[node name="Timer" type="Timer" parent="CanvasLayer/VBoxContainer/Sprite"]
wait_time = 0.07

[node name="arrow_left" type="Sprite" parent="CanvasLayer"]
position = Vector2( 710.5, 420.969 )
scale = Vector2( 0.8125, 0.8125 )
texture = ExtResource( 49 )

[node name="arrow_right" type="Sprite" parent="CanvasLayer"]
position = Vector2( 995, 420 )
scale = Vector2( 0.813, 0.813 )
texture = ExtResource( 51 )

[node name="diff" type="Sprite" parent="CanvasLayer"]
position = Vector2( 852.909, 420 )
scale = Vector2( 0.757576, 0.757576 )
texture = ExtResource( 50 )
script = ExtResource( 52 )

[node name="Tween" type="Tween" parent="CanvasLayer/diff"]

[node name="background3" type="CanvasLayer" parent="."]
layer = -2

[node name="yellowbackground" type="Sprite" parent="background3"]
position = Vector2( 512, 185.5 )
scale = Vector2( 0.793184, 0.946429 )
z_index = -3
texture = ExtResource( 2 )

[node name="background" type="ColorRect" parent="background3"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -231.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background2" type="ColorRect" parent="background3"]
margin_right = 1024.0
margin_bottom = 44.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="CanvasLayer/VBoxContainer/Sprite/Timer" to="." method="_on_Timer_timeout"]
